[package]
name = "Orion"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["fs", "auth"] }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
